Automatic reconnect of 'hono' connection after credentials are changed.
On Hub-credentials changes, ConnectionSupervisorActor gets notified by SolutionModifiedActor in order to restart the potentially active 'Hono'-connection with the new parameters.

Signed-off-by: Andrey Balarev <andrey.balarev@bosch.io>